# market-slice-ml-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: ml.yaml  providers.yaml  quality_rules.yaml  relationships.yaml  report.yaml  slicing.yaml  symbols.yaml  train_val_pairs.yaml
docs/: architecture.md  known_limitations.md  testing.md
scripts/: check_cuda.py  check_data_sources.py  check_no_trading_api.py  detect_ibkr_host.py  doctor.py  install_pyg.sh  run_all_checks.sh  setup_env.sh  smoke_local_pipeline.py  verify_install.py  verify_torch_stack.py
src/market_slice_ml/: __init__.py  pipeline.py
tests/: conftest.py
tests/e2e/: test_offline_smoke_research_flow.py
tests/fixtures/: __init__.py  fake_providers.py  synthetic_data.py  synthetic_graph.py  synthetic_slices.py
tests/integration/: __init__.py  test_cli_smoke_pipeline.py  test_docker_compose_config.py  test_full_pipeline.py  test_report_generation.py  test_training_loop.py
tests/property/: test_ensemble_weight_sum_properties.py  test_label_horizon_properties.py  test_no_lookahead_properties.py  test_quality_score_properties.py  test_timestamp_utc_properties.py
tests/unit/: test_akshare_disabled_by_default.py  test_asset_embedding.py  test_bar_normalizer_schema.py  test_bar_resampler.py  test_calibration.py  test_canonical_builder.py  test_cli_commands_offline.py  test_confidence_calibrator.py  test_cross_asset_features.py  test_cross_provider_comparator.py  test_data_leak_detection.py  test_data_versioning.py  test_dataset_fingerprint.py  test_dataset_slice_validator.py  test_duckdb_store.py  test_duplicate_detector.py  test_ensemble_weighting.py  test_env_defaults.py  test_feature_builder.py  test_forward_volatility_label.py  test_gap_filler.py  test_gnn_fallback_model_shapes.py  test_gnn_onnx_export.py  test_gnn_trainer_tiny.py  test_graph_dataset_builder.py  test_label_builder.py  (+39 more)
(+106 files in other folders)
