[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "market-slice-ml-platform"
version = "1.0.0"
description = "Local-first multi-asset market research ML platform; research only, no trading."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "typer>=0.12,<1",
  "rich>=13,<15",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "python-dotenv>=1,<2",
  "pyyaml>=6,<7",
  "polars>=1.0,<2",
  "pandas>=2.2,<3",
  "pyarrow>=16,<23",
  "numpy>=1.26,<3",
  "scipy>=1.13,<2",
  "duckdb>=1,<2",
  "sqlalchemy>=2,<3",
  "yfinance>=0.2,<2",
  "pandas-datareader>=0.10,<1",
  "requests>=2.31,<3",
  "httpx>=0.27,<1",
  "pytz>=2024",
  "tzdata>=2024",
  "lightgbm>=4,<5",
  "xgboost>=2,<4",
  "scikit-learn>=1.5,<2",
  "onnx>=1.16,<2",
  "onnxruntime>=1.18,<2",
  "onnxmltools>=1.12,<2",
  "onnxscript",
  "plotly>=5.22,<7",
  "jinja2>=3.1,<4",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
torch = ["torch"]
ibkr = ["ib_insync>=0.9,<1"]
gnn = ["torch-geometric>=2.5,<3"]
akshare = ["akshare>=1.12,<2"]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "pytest-mock>=3,<4",
  "hypothesis>=6,<7",
  "ruff>=0.4,<1",
  "mypy>=1.10,<2",
  "types-PyYAML>=6,<7",
]

[project.scripts]
market-ml = "market_slice_ml.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/market_slice_ml"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/market_slice_ml/cli/main.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["market_slice_ml.web.app"]
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"
